# nl2sql

./: .env-template  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_dev.py  run_prod.py  sync-env_template.py
src/backend/: __init__.py  config.py  config_constants.py  constants.py  main.py
src/backend/api/: __init__.py  dependencies.py  middleware.py
src/backend/domain/: __init__.py  base_enums.py  errors.py  pipeline.py  query_trace.py  requests.py  responses.py  schema_nodes.py  types.py  vector_metadata.py
src/backend/infrastructure/: __init__.py  database_client.py  embedding_client.py  llm_client.py  storage_client.py
src/backend/repositories/: schema_filtering.py  schema_repository.py  sql_execution.py  sql_generation.py  sql_validation.py  vector_repository.py
src/backend/services/: nl2sql_service.py  schema_service.py  vector_service.py
src/backend/utils/: __init__.py  logging.py  token_utils.py  tracing.py  yaml_loader.py
tests/integration/: __init__.py  test_atomic_transactions.py  test_db_connection.py  test_embedding_connection.py  test_llm_connection.py  test_read_only_enforcement.py  test_storage_connection.py  test_vector_store_connection.py
tests/unit/: test_config.py  test_logging.py  test_schema_nodes.py  test_token_utils.py
